--- a/platformer.html
+++ b/platformer.html
@@ -2,7 +2,9 @@
 <html>
 <body>
 
+  <a href="./index.html">return home</a>
 <h1 onclick="this.innerHTML = 'Ooops!'">Click on this text!</h1>
+
 <canvas id="canvas" width="480" height="360" style="border:1px solid black"></canvas>
 
 <script>
