--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div>
         <h3>Games</h3>
         <ul>
-            <li><a href="./platformer.html">Platformer game</a></li>
+            <li><a href="./platformer/index.html">Platformer game</a></li>
         </ul>
     </div>
 </body>
