--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <h3>Games</h3>
         <ul>
             <li><a href="./platformer/index.html">Platformer game</a></li>
+            <li><a href="./shoecompany/index.html">The Shoe Company</a></li>
         </ul>
     </div>
 </body>
