--- a/shoecompany/index.html
+++ b/shoecompany/index.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="header">
+        <h1 id="logo">shews</h1>
+        <ul class="nav">
+            <li><a href="./">Home</a></li>
+            <li><a href="./">Home</a></li>
+            <li><a href="./">Home</a></li>
+            <li><a href="./">Home</a></li>
+        </ul>
+    </div>
 </body>
 </html>
