--- a/shoecompany/index.html
+++ b/shoecompany/index.html
@@ -9,12 +9,13 @@
 </head>
 <body>
     <div class="header">
-        <h1 id="logo">shews</h1>
+        <a href="./index.html" id="logo"><img src="logo.png" alt=""></a>
         <ul class="nav">
-            <li><a href="./">Home</a></li>
-            <li><a href="./">Home</a></li>
-            <li><a href="./">Home</a></li>
-            <li><a href="./">Home</a></li>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./about.html">About</a></li>
+            <li><a href="./services.html">Services</a></li>
+            <li><a href="./gallery.html">Gallery</a></li>
+            <li><a href="./contact.html">Contact</a></li>
         </ul>
     </div>
 </body>
