Header styled almost

--- a/shoecompany/index.html
+++ b/shoecompany/index.html
@@ -9,14 +9,14 @@
 </head>
 <body>
     <div class="header">
-        <a href="./index.html" id="logo"><img src="logo.png" alt=""></a>
+        <a href="./index.html"><img src="logo.png" alt="" id="logo"></a>
         <ul class="nav">
-            <li><a href="./index.html">Home</a></li>
             <li><a href="./about.html">About</a></li>
             <li><a href="./services.html">Services</a></li>
             <li><a href="./gallery.html">Gallery</a></li>
             <li><a href="./contact.html">Contact</a></li>
         </ul>
+        <div class="clear"></div>
     </div>
 </body>
 </html>
