--- a/shoecompany/index.html
+++ b/shoecompany/index.html
@@ -3,14 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>PMO</title> <!--Performant Men's Outerwear-->
+
+    <link rel="icon" type="image/x-icon" href="media/logo.png">
     <link rel="stylesheet" href="styles.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Gabarito:wght@400..900&display=swap" rel="stylesheet">
     
-    <title>Document</title>
 </head>
 <body>
-    <div class="header">
-        <a href="./index.html"><img src="logo.png" alt="" id="logo"></a>
-        <ul class="nav">
+    <div id="header">
+        <div id="logo">
+            <a href="./index.html"><img src="media/logo.png"></a>
+        </div>
+
+        <div id="hamburger">
+            <img src="media/hamburger.png" onclick="toggleNav()">
+        </div>
+
+        <ul id="nav">
             <li><a href="./about.html">About</a></li>
             <li><a href="./services.html">Services</a></li>
             <li><a href="./gallery.html">Gallery</a></li>
@@ -18,5 +31,13 @@
         </ul>
         <div class="clear"></div>
     </div>
+
+    <script>
+        const nav = document.getElementById('nav');
+
+        function toggleNav(){
+            nav.style.display = nav.style.display == 'block' ? 'none' : 'block';
+        }
+    </script>
 </body>
 </html>
