Might work on slideshow element later

--- a/shoecompany/index.html
+++ b/shoecompany/index.html
@@ -33,7 +33,7 @@
     </div>
 
     <script>
-        const nav = document.getElementById('nav');
+        let nav = document.getElementById('nav');
 
         function toggleNav(){
             nav.style.display = nav.style.display == 'block' ? 'none' : 'block';
