--- a/platformer/index.html
+++ b/platformer/index.html
@@ -19,15 +19,37 @@
         <button id="enterLevelEditorButton" onclick="toggleLevelEditor()">Enter Level Editor</button>
 
         <div id="levelEditor" style="display: none;">
-            <ul id="instructions">
-                <li>Right click to delete</li>
-            </ul>
-            <select name="idModal" id="idModal">
-                <option value="0">Ground</option>
-                <option value="1">Hard Block</option>
-                <option value="6">Brick Block</option>
-                <option value="3">? Block</option>
-            </select>
+            <fieldset>
+                <legend>Instructions</legend>
+                <ul>
+                    <li>Left click to create</li>
+                    <li>Right click to delete</li>
+                    <li>Click and drag to move entities</li>
+                    <li>A and D to shift camera</li>
+                </ul>
+            </fieldset>
+            <fieldset>
+                <legend>Block</legend>
+                <select name="idModal" id="idModal">
+                    <option value="0">Ground</option>
+                    <option value="1">Hard Block</option>
+                    <option value="6">Brick Block</option>
+                    <option value="3">? Block</option>
+                </select>
+            </fieldset>
+            <fieldset>
+                <legend>Level length</legend>
+                <label id="lengthOutput" for="lengthModal">0px</label>
+                <input 
+                    type="range" 
+                    name="lengthModal" 
+                    id="lengthModal" 
+                    value="0" 
+                    max="512" 
+                    min="0" 
+                    oninput="updateLevelLength(this)"
+                >
+            </fieldset>
         </div>
     </div>
     <div class="clear"></div>
