--- a/platformer/index.html
+++ b/platformer/index.html
@@ -11,7 +11,7 @@
         <a href="../index.html">return home</a>
     </div>
     <div class="sidebar">
-        <input id="levelTitle" type="text" placeholder="Level title">
+        <input id="levelTitle" type="text" placeholder="Level title" autocomplete="off">
         <button id="exportLevelButton" onclick="exportLevel()">Export Level</button>
         <hr>
         <p>Load a level</p>
@@ -33,7 +33,7 @@
             </fieldset>
             <fieldset>
                 <legend>Block</legend>
-                <select name="idModal" id="idModal">
+                <select name="idModal" id="idModal" autocomplete="off">
                     <option value="0">Ground</option>
                     <option value="1">Hard Block</option>
                     <option value="6">Brick Block</option>
