Abstract hide function

--- a/platformer/index.html
+++ b/platformer/index.html
@@ -22,7 +22,7 @@
         <div id="levelEditor" style="display: none;">
             <fieldset id="instructions">
                 <legend>Instructions</legend>
-                <a href="javascript:void(0);" class="legend" onclick="toggleInstructions(this)">hide</a>
+                <a href="javascript:void(0);" class="legend" onclick="hideShow(this)">hide</a>
                 <ul>
                     <li>Left click to create</li>
                     <li>Right click to delete</li>
