--- a/platformer/index.html
+++ b/platformer/index.html
@@ -32,7 +32,7 @@
                 </ul>
             </fieldset>
             <fieldset>
-                <legend>Block</legend>
+                <legend>Object</legend>
                 <select name="idModal" id="idModal" autocomplete="off">
                     <option value="0">Ground</option>
                     <option value="1">Hard Block</option>
