file structure architecture

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <div class="content">
         <canvas id="canvas" width="512"height="488" style="border:1px solid black;"></canvas>
         v1.0 - 
-        <a href="../index.html">return home</a>
+        <a href="https://github.com/swag100/levelEditor">view source code</a>
     </div>
     <div class="sidebar">
         <input id="levelTitle" type="text" placeholder="Level title" autocomplete="off">
