add play button not functional

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
         <input type="file" id="importLevelButton">
         <hr>
         <button id="enterLevelEditorButton" onclick="toggleLevelEditor()">Enter Level Editor</button>
-
+        <button id="playButton" onclick="play()" style="float:right;margin:0;">Play!</button>
+        <div class="clear"></div>
         <div id="levelEditor" style="display: none;">
             <fieldset id="instructions">
                 <legend>Instructions</legend>
