--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <a href="https://github.com/swag100/levelEditor" target="_blank">view source code</a>
     </div>
     <div class="sidebar">
-        <input id="levelTitle" type="text" placeholder="Level title" autocomplete="off">
+        <input id="levelTitle" type="text" placeholder="Level title" autocomplete="off" style="width:100%;">
         <button id="exportLevelButton" onclick="exportLevel()">Export Level</button>
         <hr>
         <p>Load a level</p>
