need to fix delete 2 entities bug

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <button id="exportLevelButton" onclick="exportLevel()">Export</button>
             <input type="file" id="importLevelInput" accept="application/json" style="display:none;">
             <button id="importLevelButton">Import</button>
-            <div style="border-bottom:1px dotted black;width:25px;display:inline-block;margin-bottom:3px;"></div>
+            <div style="border-bottom:1px dotted black;width:15px;display:inline-block;margin-bottom:3px;margin-left:-1px;"></div>
             <button id="playButton" onclick="play()">Play!</button>
         </div>
         <hr>
