--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <option value="HardBlock">Hard Block</option>
                     <option value="BrickBlock">Brick Block</option>
                     <option value="LuckyBlock">? Block</option>
-                    <option value="Entity">testttttt</option>
+                    <option value="Player">testttttt</option>
                 </select>
             </fieldset>
         </div>
