--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
                     <option value="Ground">Ground</option>
                     <option value="HardBlock">Hard Block</option>
                     <option value="BrickBlock">Brick Block</option>
-                    <option value="LuckyBlock">? Block</option>
-                    <option value="Player">testttttt</option>
+                    <option value="QuestionBlock">Question Block</option>
+                    <option value="Player">Mario</option>
                 </select>
             </fieldset>
         </div>
