--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
         <a href="https://github.com/swag100/levelEditor" target="_blank">view source code</a>
     </div>
     <div class="sidebar">
+        <input id="levelTitle" type="text" placeholder="Level title" autocomplete="off">
         <div class="levelIO">
-            <input id="levelTitle" type="text" placeholder="Level title" autocomplete="off">
             <button id="exportLevelButton" onclick="exportLevel()">Export</button>
             <input type="file" id="importLevelInput" accept="application/json" style="display:none;">
             <button id="importLevelButton">Import</button>
-            <div style="border-bottom:1px dotted black;width:15px;display:inline-block;margin-bottom:3px;margin-left:-1px;"></div>
             <button id="playButton" onclick="play()">Play!</button>
+            <div class="clear"></div>
+            <div class="flavorDots"></div>
         </div>
         <hr>
         <button id="enterLevelEditorButton" onclick="toggleLevelEditor()">Enter Level Editor</button>
