coins make you stuck

--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
                     <option value="HardBlock">Hard Block</option>
                     <option value="BrickBlock">Brick Block</option>
                     <option value="QuestionBlock">Question Block</option>
+                    <option value="Coin">Coin</option>
                     <option value="Player">Mario</option>
+                    <option value="Goomba">Goomba</option>
                 </select>
             </fieldset>
         </div>
